erDiagram
    tenants ||--o{ leads : "may capture"
    tenants ||--o{ quote_requests : "may capture"
    leads ||--o| quote_requests : "may originate"
    tenants ||--o{ audit_events : logs
    users ||--o{ audit_events : "acts as"
    tenants ||--o{ export_jobs : requests
    tenants ||--o{ legal_holds : applies
    tenants ||--o{ retention_jobs : sweeps
    tenants ||--o{ job_queue : "queues work in"
    tenants ||--o{ idempotency_keys : "guards requests in"

    leads {
        uuid id PK
        uuid tenant_id FK "nullable: platform-level lead"
        varchar source
        varchar status
    }
    audit_events {
        uuid id PK
        uuid tenant_id FK
        uuid actor_user_id FK
        uuid effective_user_id FK "during impersonation"
        enum action
        varchar entity_type
        uuid entity_id
    }
    export_jobs {
        uuid id PK
        uuid tenant_id FK
        varchar report_key
        varchar format "csv|xlsx|pdf"
        jsonb scope_snapshot "frozen permission scope"
    }
    legal_holds {
        uuid id PK
        uuid tenant_id FK
        varchar scope_type "tenant|entity_type|entity"
        timestamp released_at
    }
    retention_jobs {
        uuid id PK
        uuid tenant_id FK
        varchar action "archive|purge|anonymize"
        varchar entity_type
    }
    job_queue {
        uuid id PK
        uuid tenant_id FK "nullable: platform sweep"
        varchar job_type
        enum status
        varchar dedupe_key UK
    }
    idempotency_keys {
        uuid id PK
        uuid tenant_id FK
        varchar scope
        varchar key "UK per scope"
    }
